// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark tone class + light tone 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 20px;\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular pe-light-tone\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Label</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 20px;\\" class=
\\"pe-light-tone\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Label</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`No options 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: class 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular class-x\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: className 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular className-x\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: defaultChecked -- dark tone class 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--on pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: defaultChecked 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--on pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: disabled -- dark tone class 1`] = `
"<div class=\\"multiple\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=
      \\"pe-button pe-icon-button pe-button--disabled pe-button--inactive pe-control__button\\"
      disabled>
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Off</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\" disabled></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=
      \\"pe-button pe-icon-button pe-button--disabled pe-button--inactive pe-control__button\\"
      disabled>
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">On</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\" disabled></label>
  </div>
</div>
"
`;

exports[`Option: disabled 1`] = `
"<div class=\\"multiple\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=
      \\"pe-button pe-icon-button pe-button--disabled pe-button--inactive pe-control__button\\"
      disabled>
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Off</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\" disabled></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=
      \\"pe-button pe-icon-button pe-button--disabled pe-button--inactive pe-control__button\\"
      disabled>
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">On</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\" disabled></label>
  </div>
</div>
"
`;

exports[`Option: element 1`] = `
"<a class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label></a>
<div class=\\"pe-button pe-icon-button pe-control__button\\" tabindex=
\\"0\\">
  <label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-button__content\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-ripple\\">
      <label class=\\"pe-control__form-label\\"></label>
    </div>
    <div class=\\"pe-button__focus\\">
      <label class=\\"pe-control__form-label\\"></label>
    </div>
    <div class=\\"pe-icon pe-icon--regular pe-control__button--on\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-svg\\">
        <label class=\\"pe-control__form-label\\"></label>
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <label class=\\"pe-control__form-label\\"><path d=
          \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
          </path></label>
        </svg>
      </div>
    </div>
    <div class=\\"pe-icon pe-icon--regular pe-control__button--off\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-svg\\">
        <label class=\\"pe-control__form-label\\"></label>
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <label class=\\"pe-control__form-label\\"><path d=
          \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
          </path></label>
        </svg>
      </div>
    </div>
  </div>
</div>
<form>
  <input type=\\"checkbox\\">
</form>
"
`;

exports[`Option: iconButton (custom hover behavior) 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__wash\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: iconOn, iconOff (custom icon) 1`] = `
"<div class=\\"multiple\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--small\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--small pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--small pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24.00 24.00\\"
              enable-background=\\"new 0 0 24.00 24.00\\" focusable=
              \\"false\\">
                <label class=\\"pe-control__form-label\\"><path fill=
                \\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\"
                stroke-linejoin=\\"round\\" d=
                \\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">small</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24.00 24.00\\"
              enable-background=\\"new 0 0 24.00 24.00\\" focusable=
              \\"false\\">
                <label class=\\"pe-control__form-label\\"><path fill=
                \\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\"
                stroke-linejoin=\\"round\\" d=
                \\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">regular</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--medium\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--medium pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--medium pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24.00 24.00\\"
              enable-background=\\"new 0 0 24.00 24.00\\" focusable=
              \\"false\\">
                <label class=\\"pe-control__form-label\\"><path fill=
                \\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\"
                stroke-linejoin=\\"round\\" d=
                \\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">medium</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--large\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--large pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--large pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24.00 24.00\\"
              enable-background=\\"new 0 0 24.00 24.00\\" focusable=
              \\"false\\">
                <label class=\\"pe-control__form-label\\"><path fill=
                \\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\"
                stroke-linejoin=\\"round\\" d=
                \\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">large</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`Option: id 1`] = `
"<div id=\\"id-x\\" class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: label (RTL) 1`] = `
"<div class=\\"pe-rtl\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">ضع الكلمة
      المناسبة</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`Option: label 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-control__label\\">
    <label class=\\"pe-control__form-label\\">Label</label>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: selectable 1`] = `
"<div class=\\"multiple\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--inactive pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=
      \\"pe-button pe-icon-button pe-button--inactive pe-control__button\\">
      <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Never</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\" disabled></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">Only when
      unchecked</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`Option: size 1`] = `
"<div class=\\"multiple\\">
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--small\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--small pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--small pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">small</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--regular pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">regular</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--medium\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--medium pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--medium pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">medium</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
  <div class=
  \\"pe-control pe-checkbox-control pe-control--off pe-control--large\\">
  <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-control__box\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button pe-icon-button pe-control__button\\"
      tabindex=\\"0\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-button__content\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-ripple\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=\\"pe-button__focus\\">
            <label class=\\"pe-control__form-label\\"></label>
          </div>
          <div class=
          \\"pe-icon pe-icon--large pe-control__button--on\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \\"pe-icon pe-icon--large pe-control__button--off\\">
            <label class=\\"pe-control__form-label\\"></label>
            <div class=\\"pe-svg\\">
              <label class=\\"pe-control__form-label\\"></label>
              <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
              focusable=\\"false\\">
                <label class=\\"pe-control__form-label\\"><path d=
                \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"pe-control__label\\">
      <label class=\\"pe-control__form-label\\">large</label>
    </div><label class=\\"pe-control__form-label\\"><input type=
    \\"checkbox\\"></label>
  </div>
</div>
"
`;

exports[`Option: tabindex 1`] = `
"<div tabindex=\\"3\\" class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Option: value 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div><label class=\\"pe-control__form-label\\"><input name=\\"worth\\"
  type=\\"checkbox\\" value=\\"notable\\"></label>
</div>
"
`;

exports[`Styled Checkbox 1`] = `
"<div style=\\"color: rgb(255, 0, 0);\\" class=
\\"pe-control pe-checkbox-control pe-control--on pe-control--regular\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-control__label\\">
    <label class=\\"pe-control__form-label\\">Label</label>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Themed Checkbox (color and font size) 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-control__label\\">
    <label class=\\"pe-control__form-label\\">Label</label>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;

exports[`Themed Checkbox (colors) -- dark tone class 1`] = `
"<div class=
\\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\\">
<label class=\\"pe-control__form-label\\"></label>
  <div class=\\"pe-control__box\\">
    <label class=\\"pe-control__form-label\\"></label>
    <div class=\\"pe-button pe-icon-button pe-control__button\\"
    tabindex=\\"0\\">
      <label class=\\"pe-control__form-label\\"></label>
      <div class=\\"pe-button__content\\">
        <label class=\\"pe-control__form-label\\"></label>
        <div class=\\"pe-ripple\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=\\"pe-button__focus\\">
          <label class=\\"pe-control__form-label\\"></label>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--on\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \\"pe-icon pe-icon--regular pe-control__button--off\\">
          <label class=\\"pe-control__form-label\\"></label>
          <div class=\\"pe-svg\\">
            <label class=\\"pe-control__form-label\\"></label>
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <label class=\\"pe-control__form-label\\"><path d=
              \\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-control__label\\">
    <label class=\\"pe-control__form-label\\">Label</label>
  </div><label class=\\"pe-control__form-label\\"><input type=
  \\"checkbox\\"></label>
</div>
"
`;
